[gd_scene load_steps=3 format=3 uid="uid://4kglokib7mv3"]

[ext_resource type="Theme" uid="uid://bqnr1830yqwqe" path="res://assets/themes/td_theme.tres" id="1_50ysw"]
[ext_resource type="Script" path="res://scripts/sell_button.gd" id="2_gf0ww"]

[node name="SellButton" type="Button" node_paths=PackedStringArray("tooltip", "tooltip_label")]
custom_minimum_size = Vector2(80, 60)
size_flags_vertical = 8
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource("1_50ysw")
theme_override_font_sizes/font_size = 24
text = "Sell"
script = ExtResource("2_gf0ww")
tooltip = NodePath("Tooltip")
tooltip_label = NodePath("Tooltip/Background/MarginContainer/Description")
metadata/_edit_vertical_guides_ = [8.0, 72.0, 80.0]
metadata/_edit_horizontal_guides_ = [60.0, 8.0, 52.0]

[node name="Tooltip" type="Control" parent="."]
visible = false
z_index = 50
layout_mode = 3
anchors_preset = 0
offset_left = -160.0
offset_right = -5.0
offset_bottom = 60.0

[node name="Background" type="PanelContainer" parent="Tooltip"]
layout_mode = 0
offset_right = 155.0
offset_bottom = 60.0

[node name="MarginContainer" type="MarginContainer" parent="Tooltip/Background"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Description" type="Label" parent="Tooltip/Background/MarginContainer"]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2
text = "Sell this tower for 1 money."
autowrap_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
